...

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.airbnb.epoxy.EpoxyRecyclerView
                android:id="@+id/summary_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingHorizontal="2dp"
                android:paddingVertical="6dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
...
