...
    <string name="discover_keep_watching_title">Up next</string>

    <string name="following_shows_title">Followed</string>
    <string name="cd_following_shows_title">@string/following_shows_title</string>
    <string name="watched_shows_title">Watched</string>
    <string name="cd_watched_shows_title">@string/watched_shows_title</string>
    <string name="library_title">Library</string>
    <string name="cd_library_title">@string/library_title</string>
    <string name="upnext_title">Up Next</string>
    <string name="cd_upnext_title">@string/library_title</string>

    <string name="upnext_filter_followed_shows_only_title">Followed only</string>

...
